trying to get the page sized correctly on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-	font-family: Helvetica, sans-serif
+	font-family: Helvetica, sans-serif;
+	max-width: 470px;
 }
 
 #lottoNumbers {
-	max-width: 470px;
 	margin-left: auto;
 	margin-right: auto;
 }
